--- a/bin/styles/style.less
+++ b/bin/styles/style.less
@@ -113,7 +113,7 @@
 				background: #EEE;
 
 				.wall {
-					@wall-color: #770;
+					@wall-color: black;
 					@corridor-width: 40px;
 					@wall-top-width: 8px;
 					@doorway-width: 20px;
