--- a/bin/styles/style.less
+++ b/bin/styles/style.less
@@ -76,6 +76,32 @@
 			padding: 20px;
 		}
 	}
+
+	.game-over {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		right: 0;
+		left: 0;
+		z-index: 9000;
+		background: rgba(0, 0, 0, 0.4);
+
+		.exit-button-wrapper {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+
+			.exit-button {
+				margin-left: -50%;
+			    margin-right: 50%;
+				padding: 10px;
+				font-size: 200%;
+				background: white;
+				border: 4px solid black;
+				border-radius: 10px;
+			}
+		}
+	}
 }
 
 .map {
