--- a/bin/partials/team-setup.html
+++ b/bin/partials/team-setup.html
@@ -1,6 +1,8 @@
 <div class="team-setup">
-	<div ng-repeat="character in model.roster" ng-click="selectCharacter(character);" ng-class="{'selected': character.selected}">
-		<character-panel character="character"></character-panel>
+	<div class="characters">
+		<div ng-repeat="character in model.roster" ng-click="selectCharacter(character);" ng-class="{'selected': character.selected}">
+			<character-panel character="character"></character-panel>
+		</div>
 	</div>
 	<div>Team members selected: {{model.charactersSelectedCount}} / {{model.targetTeamSize}}
 	<button ng-click="startGame();" ng-disabled="model.charactersSelectedCount != model.targetTeamSize">
