--- a/bin/partials/directives/character-panel.html
+++ b/bin/partials/directives/character-panel.html
@@ -1,7 +1,7 @@
-<div class="character-panel">
+<div class="character-panel" ng-class="{dead: !character.alive}">
 	<div class="image">
 		<div class="name">{{character.name}}</div>
-		<div class="health">{{character.health}}</div>
+		<div class="health" ng-style="{height: 100 - character.health + '%'}">{{character.health}}</div>
 	</div>
 	<item-slot size="weapon" item="character.weapon"></item-slot>
 	<item-slot size="large" item="character.itemLarge"></item-slot>
