--- a/bin/partials/directives/item-slot.html
+++ b/bin/partials/directives/item-slot.html
@@ -1,4 +1,6 @@
 <div class="item-slot {{size}}">
-	{{item.model.name}}
-	<div class="ammo" data-ng-show="item.model.category == 'weapon'">{{item.ammo}}</div>
+	<div class="item">
+		<img ng-show="item" class="item-image" src="img/items/{{item.model.name}}.png" />
+		<div class="ammo" data-ng-show="item.model.category == 'weapon'">{{item.ammo}}</div>
+	</div>
 </div>
