--- a/bin/partials/game.html
+++ b/bin/partials/game.html
@@ -7,6 +7,9 @@
 	<div class="map-wrapper" id="map-wrapper" hm-swipe="swipe($event)">
 		<game-map map="model.map" ng-style="{top: getMapTopOffset(), left: getMapLeftOffset()}">
 		</game-map>
+		<div class="team-running" data-ng-show="model.teamTired <= 0">
+			RUNNING!
+		</div>
 		<div class="action-panel">
 			<div class="action-progress" ng-show="model.currentAction.actionObject">
 				<div class="progress-bar" ng-style="{width: model.currentAction.progress / 10 + '%'}"></div>
