--- a/bin/styles/less/style.less
+++ b/bin/styles/less/style.less
@@ -1,309 +1,4 @@
-@import (reference) "misc.less";
-
-@img-path: '../../img/';
-
-@screen-height: 320px;
-@character-panel-width: 90px;
-@map-tile-size: 90px;
-
-@wall-color: black;
-@corridor-width: 40px;
-@wall-thickness: 6px;
-@doorway-width: 20px;
-@door-width: 30px;
-@door-color: #999;
-
-@action-button-size: 60px;
-
-.team-setup {
-	.characters {
-		.clearfix();
-		margin: 26px;
-
-		.character-panel {
-			float: left;
-			margin: 0 4px;
-		}
-		.selected {
-			.character-panel {
-				box-shadow: 0px 0px 1px 4px green;
-			}
-		}
-	}
-}
-
-.character-panel {
-	.clearfix();
-	position: relative;
-	background: url('@{img-path}character-panel.png');
-	width: @character-panel-width;
-
-	.image {
-		position: relative;
-		height: 90px;
-		background-image: url('@{img-path}character.png');
-		clear: both;
-	}
-
-	.name {
-		position: absolute;
-		bottom: 0;
-		width: 100%;
-		text-align: center;
-	}
-
-	.health {
-		color: transparent;
-		width: 100%;
-		background: rgba(255, 0, 0, 0.4);
-		position: absolute;
-		bottom: 0;
-	}
-
-	&.dead {
-		.image {
-			background-image: url('@{img-path}character-dead.png');
-		}
-	}
-}
-
-.item-slot {
-	position: relative;
-	height: 35px;
-	width: 100%;
-	float: left;
-
-	.item {
-		position: relative;
-		.item-image {
-			margin: 0 auto;
-			display: block;
-		}
-
-		.ammo {
-			position: absolute;
-			right: 4px;
-			bottom: 4px;
-			z-index: 50;
-		}
-	}
-
-	&.large {
-		width: 60%;
-	}
-	&.small {
-		width: 40%;
-	}
-}
-
-.game {
-	.team-panel {
-		width: @character-panel-width * 2;
-		float: left;
-
-		.character-panel {
-			float: left;
-		}
-	}
-
-	.map-wrapper {
-		height: @screen-height;
-		position: relative;
-		overflow: hidden;
-
-		.map {
-			position: absolute;
-			width: @map-tile-size * 50;
-			transition: 1.5s top, 1.5s left;
-
-		}
-	}
-
-	.action-panel {
-		position: absolute;
-		right: 10px;
-		bottom: 10px;
-		z-index: 500;
-
-		.action {
-			line-height: @action-button-size;
-			width: @action-button-size;
-			text-align: center;
-			margin-top: 10px;
-
-			border: 3px solid green;
-			border-radius: 5px;
-			background: lime;
-		}
-
-		.action-progress {
-			position: absolute;
-			bottom: 0px;
-			right: @action-button-size + 10;
-			width: 100px;
-			height: 20px;
-
-			border: 2px solid green;
-			border-radius: 2px;
-			background: black;
-
-			.progress-bar {
-				background: lime;
-				height: 100%;
-			}
-		}
-	}
-
-	.game-over {
-		position: absolute;
-		top: 0;
-		bottom: 0;
-		right: 0;
-		left: 0;
-		z-index: 9000;
-		background: rgba(0, 0, 0, 0.4);
-
-		.exit-button-wrapper {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-
-			.exit-button {
-				margin-left: -50%;
-			    margin-right: 50%;
-				padding: 10px;
-				font-size: 200%;
-				background: white;
-				border: 4px solid black;
-				border-radius: 10px;
-			}
-		}
-	}
-}
-
-.map {
-
-	.column {
-		float: left;
-
-		.tile {
-			position: relative;
-			width: @map-tile-size;
-			height: @map-tile-size;
-			opacity: 0;
-			padding: 10px;
-
-			&.start::before {
-				content: 'START!';
-			}
-
-			&.finish::before {
-				content: 'FINISH!';
-			}
-
-			&.revealed {
-				opacity: 0.4;
-			}
-
-			&.visible {
-				opacity: 1;
-
-				.enemy {
-					visibility: inherit;
-				}
-			}
-
-			&.area {
-				background: #EEE;
-
-				.wall {
-					z-index: 50;
-					background: @wall-color;
-					border: (@map-tile-size - @doorway-width) / 2 solid @wall-color;
-					border-top: none;
-					border-bottom: none;
-					width: @map-tile-size + @wall-thickness;
-					height: @wall-thickness;
-					
-					position: absolute;
-					top: 50%;
-					left: -@wall-thickness / 2;
-					margin-top: -@wall-thickness / 2;
-
-					&.has-door {
-						background: none;
-					}
-
-					&.N {
-						transform: translateY(-@map-tile-size / 2);
-					}
-					&.S {
-						transform: translateY(@map-tile-size / 2);
-					}
-					&.W {
-						transform: translateX(-@map-tile-size / 2) rotate(90deg);
-					}
-					&.E {
-						transform: translateX(@map-tile-size / 2) rotate(90deg);
-					}
-
-					.door {
-						width: @door-width + 1;
-						height: @wall-thickness + 4;
-						top: -2px;
-						border: (@door-width / 2) solid @door-color;
-						border-top: none;
-						border-bottom: none;
-						outline: 1px solid #EEE;
-						position: absolute;
-						left: 50%;
-						margin-left: -@door-width / 2;
-						transition: all 0.5s;
-
-						&.opened {
-							width: @doorway-width + @door-width;
-							margin-left: (-@doorway-width - @door-width) / 2;
-						}
-					}
-				}
-			}
-		}
-	}
-
-	.enemies-panel {
-		position: absolute;
-		top: 3px;
-		right: 3px;
-	    text-align: right;
-
-		.enemy {
-			visibility: hidden;
-			z-index: 15;
-
-			.enemyCount {
-				vertical-align: top;
-				display: inline-block;
-				padding: 2px 5px;
-			}
-
-			.enemyIcon {
-				display: inline-block;
-				width: 20px;
-				height: 20px;
-
-				&.crawler {
-					background-color: cyan;
-				}
-				&.walker {
-					background-color: green;
-				}
-				&.runner {
-					background-color: red;
-				}
-				&.hulk {
-					background-color: black;
-				}
-			}
-		}
-	}
-}
+@import "include/reset.less";
+@import "include/misc.less";
+@import "include/ui.less";
+@import "include/game.less";
