Item drag and drop

--- a/bin/styles/less/include/reset.less
+++ b/bin/styles/less/include/reset.less
@@ -5,6 +5,16 @@ html, body, div, span, ul, li, a {
 }
 
 body {
-	overflow: hidden;
 	font-family: monospace;
+}
+
+* {
+	-webkit-user-drag: none;
+}
+
+::selection {
+  background: transparent;
+}
+::-moz-selection {
+  background: transparent;
 }
