--- a/bin/partials/directives/character-panel.html
+++ b/bin/partials/directives/character-panel.html
@@ -3,7 +3,7 @@
 		<div class="name">{{character.name}}</div>
 		<div class="health" ng-style="{height: 100 - character.health + '%'}">{{character.health}}</div>
 	</div>
-	<item-slot size="weapon" item="character.weapon"></item-slot>
-	<item-slot size="large" item="character.itemLarge"></item-slot>
+	<item-slot size="weapon" item="character.weapon" allowed-large="true"></item-slot>
+	<item-slot size="large" item="character.itemLarge" allowed-large="true"></item-slot>
 	<item-slot size="small" item="character.itemSmall"></item-slot>
 </div>
