--- a/bin/partials/directives/item-slot.html
+++ b/bin/partials/directives/item-slot.html
@@ -1,4 +1,4 @@
-<div class="item-slot {{size}}">
+<div class="item-slot {{size}}" ng-class="{selected: isSelected()}" ng-click="click();">
 	<div class="item" ng-show="item">
 		<img class="item-image" ng-src="img/items/{{item.model.name}}.png" />
 		<div class="ammo" data-ng-show="item.model.category == 'weapon'">{{item.ammo}}</div>
