--- a/bin/styles/less/style.less
+++ b/bin/styles/less/style.less
@@ -1,4 +1,5 @@
 @import "include/reset.less";
 @import "include/misc.less";
+@import "include/animations.less";
 @import "include/ui.less";
 @import "include/game.less";
