--- a/bin/partials/directives/game-map.html
+++ b/bin/partials/directives/game-map.html
@@ -5,7 +5,9 @@
 			<game-map-wall tile="tile" direction="E"></game-map-wall>
 			<game-map-wall tile="tile" direction="W"></game-map-wall>
 			<game-map-wall tile="tile" direction="S"></game-map-wall>
-			<div class="team" data-ng-show="tile.teamPresent">YOU ARE HERE!</div>
+			<div class="team" data-ng-show="tile.teamPresent">
+				<div class="pulse"></div>
+			</div>
 			<div class="teamWalkingDirection" data-ng-show="tile.teamWalkingTo">MOVING HERE!</div>
 			<div class="enemies-panel">
 				<div ng-repeat="(enemyType, enemyCount) in getGroupedEnemies(tile.enemies)" class="enemy {{enemyType}}">
