--- a/bin/partials/directives/item-slot.html
+++ b/bin/partials/directives/item-slot.html
@@ -2,5 +2,6 @@
 	<div class="item" ng-show="item">
 		<img class="item-image" ng-src="img/items/{{item.model.name}}.png" />
 		<div class="ammo" data-ng-show="item.model.category == 'weapon'">{{item.ammo}}</div>
+		<div class="reloading" ng-show="character.isReloading();">RELOAD</div>
 	</div>
 </div>
