--- a/bin/partials/game.html
+++ b/bin/partials/game.html
@@ -4,9 +4,11 @@
 			<character-panel character="model.team[id]"></character-panel>
 		</div>
 	</div>
-	<div class="map-wrapper" id="map-wrapper" ><!-- hm-swipe="swipe($event)" -->
-		<div data-ng-repeat="direction in ['N', 'E', 'W', 'S']">
-			<div class="action-direction" ng-class="direction" ng-click="inputDirection(direction);"></div>
+	<div class="map-wrapper" id="map-wrapper">
+		<div data-ng-repeat="direction in ['N', 'E', 'W', 'S', '']" class="action-direction" ng-class="direction" ng-click="inputDirection(direction);">
+		</div>
+		<div class="team">
+			<div class="pulse"></div>
 		</div>
 		<game-map map="model.map" ng-style="{top: getMapTopOffset(), left: getMapLeftOffset()}">
 		</game-map>
