--- a/bin/styles/less/include/game.less
+++ b/bin/styles/less/include/game.less
@@ -136,12 +136,43 @@
 			transition: 1s top, 1s left;
 		}
 
+		.team {
+			@dot-size: 10px;
+			position: absolute;
+		    top: 50%;
+		    left: 50%;
+
+		    width: @dot-size;
+		    height: @dot-size;
+
+		    margin-top: -@dot-size / 2;
+		    margin-left: -@dot-size / 2;
+
+		    background-color: red;
+		    border-radius: 10px;
+
+		    z-index: 200;
+
+			.pulse {
+				position: absolute;
+			    border-radius: 90px;
+			    top: @dot-size / 2;
+			    left: @dot-size / 2;
+
+			    -webkit-animation: pulse 2s linear;
+			    -webkit-animation-iteration-count: infinite;
+			}
+		}
+
+
 		.action-direction {
 		    position: absolute;
 		    top: 50%;
 		    left: 50%;
 		    width: @map-tile-size;
 		    height: @map-tile-size;
+	    	margin-left: @map-tile-size * -0.5;
+	    	margin-top: @map-tile-size * -0.5;
 		    z-index: 300;
 
 		    &.W {
@@ -311,33 +342,6 @@
 					}
 				}
 			}
-
-			.team {
-				@dot-size: 10px;
-				position: absolute;
-			    top: 50%;
-			    left: 50%;
-
-			    width: @dot-size;
-			    height: @dot-size;
-
-			    margin-top: -@dot-size / 2;
-			    margin-left: -@dot-size / 2;
-
-			    background-color: red;
-			    border-radius: 10px;
-
-				.pulse {
-					position: absolute;
-				    border-radius: 90px;
-				    top: @dot-size / 2;
-				    left: @dot-size / 2;
-
-				    -webkit-animation: pulse 2s linear;
-				    -webkit-animation-iteration-count: infinite;
-				}
-			}
-
 		}
 	}
 
