--- a/bin/partials/directives/item-slot.html
+++ b/bin/partials/directives/item-slot.html
@@ -1,7 +1,7 @@
-<div class="item-slot {{size}}" ng-class="{selected: isSelected()}" ng-click="click();">
+<div class="item-slot {{slot}}" ng-class="{selected: isSelected()}" ng-click="click();">
 	<div class="item" ng-show="item">
 		<img class="item-image" ng-src="img/items/{{item.model.name}}.png" />
 		<div class="ammo" data-ng-show="item.model.category == 'weapon'">{{item.ammo}}</div>
-		<div class="reloading" ng-show="size === 'weapon' &amp;&amp; character.isReloading();">RELOAD</div>
+		<div class="reloading" ng-show="slot === 'weapon' &amp;&amp; character.isReloading();">RELOAD</div>
 	</div>
 </div>
