--- a/bin/styles/less/include/game.less
+++ b/bin/styles/less/include/game.less
@@ -125,7 +125,15 @@
 		}
 	}
 
-	.map-wrapper {
+	.loot-window {
+		border: 1px solid black;
+		position: absolute;
+		width: 90px;
+		top: 20px;
+		left: 10px;
+	}
+
+	.game-area {
 		height: @screen-height;
 		position: relative;
 		overflow: hidden;
