--- a/bin/styles/less/include/game.less
+++ b/bin/styles/less/include/game.less
@@ -126,11 +126,12 @@
 	}
 
 	.loot-window {
-		border: 1px solid black;
 		position: absolute;
 		width: 90px;
 		top: 20px;
 		left: 10px;
+		background: url('@{img-path}loot-window.png') top left repeat-y white;
+		z-index: 400;
 	}
 
 	.game-area {
