Random starting character archetypes

--- a/bin/partials/team-setup.html
+++ b/bin/partials/team-setup.html
@@ -1,7 +1,10 @@
 <div class="team-setup" ng-init="init();">
 	<div class="characters">
-		<div ng-repeat="character in model.roster" ng-click="selectCharacter(character);" ng-class="{'selected': character.selected}">
+		<div class="character-wrapper" ng-repeat="character in model.roster" ng-click="selectCharacter(character);" ng-class="{'selected': character.selected}">
 			<character-panel character="character"></character-panel>
+			<div class="skills">
+				<div ng-repeat="(skill, value) in character.skills">{{skill}}: {{value}}</div>
+			</div>
 		</div>
 	</div>
 	<div>Team members selected: {{model.charactersSelectedCount}} / {{model.targetTeamSize}}
