--- a/bin/styles/less/include/game.less
+++ b/bin/styles/less/include/game.less
@@ -20,13 +20,13 @@
 		.clearfix();
 		margin: 26px;
 
-		.character-panel {
+		.character-wrapper {
 			float: left;
-			margin: 0 4px;
-		}
-		.selected {
-			.character-panel {
-				box-shadow: 0px 0px 1px 4px green;
+			margin: 0 2px;
+			&.selected {
+				.character-panel {
+					box-shadow: 0px 0px 1px 4px green;
+				}
 			}
 		}
 	}
