--- a/bin/styles/less/include/game.less
+++ b/bin/styles/less/include/game.less
@@ -384,6 +384,16 @@
 							width: @doorway-width + @door-width;
 							margin-left: (-@doorway-width - @door-width) / 2;
 						}
+
+						&.security-1 {
+    						border-color: orange;
+						}
+						&.security-2 {
+    						border-color: orangered;
+						}
+						&.security-3 {
+    						border-color: darkred;
+						}
 					}
 				}
 			}
