--- a/bin/partials/directives/character-panel.html
+++ b/bin/partials/directives/character-panel.html
@@ -1,7 +1,7 @@
 <div class="character-panel" ng-class="{dead: !character.alive, inactive: !character.active}">
 	<div class="image" ng-click="characterClickAction();">
 		<div class="name">{{character.name}}</div>
-		<div class="health" ng-style="{height: 100 - character.health + '%'}">{{character.health}}</div>
+		<div class="health" ng-style="{height: 100 - (100 * character.health / character.maxHealth) + '%'}">{{character.health}}</div>
 	</div>
 	<item-slot slot="weapon" item="character.weapon" allowed-large="true" character="character" disabled="disableItems"></item-slot>
 	<item-slot slot="large" item="character.itemLarge" allowed-large="true" character="character" disabled="disableItems"></item-slot>
