--- a/bin/styles/less/include/game.less
+++ b/bin/styles/less/include/game.less
@@ -211,30 +211,36 @@
 
 
 		.action-direction {
+			@padding: 7px;
+
 		    position: absolute;
 		    top: 50%;
 		    left: 50%;
-		    width: @map-tile-size;
-		    height: @map-tile-size;
-	    	margin-left: @map-tile-size * -0.5;
-	    	margin-top: @map-tile-size * -0.5;
+		    width: @map-tile-size * 2;
+		    height: @map-tile-size * 2;
 		    z-index: 300;
 
 		    &.W {
-		    	margin-left: @map-tile-size * -1.5;
-		    	margin-top: @map-tile-size * -0.5;
+		    	margin-left: @map-tile-size * -2.5 + @padding;
+		    	margin-top: @map-tile-size * -1;
 		    }
 		    &.N {
-		    	margin-left: @map-tile-size * -0.5;
-		    	margin-top: @map-tile-size * -1.5;
+		    	margin-left: @map-tile-size * -1;
+		    	margin-top: @map-tile-size * -2.5 + @padding;
 		    }
 		    &.E {
-		    	margin-left: @map-tile-size * 0.5;
-		    	margin-top: @map-tile-size * -0.5;
+		    	margin-left: @map-tile-size * 0.5 - @padding;
+		    	margin-top: @map-tile-size * -1;
 		    }
 		    &.S {
-		    	margin-left: @map-tile-size * -0.5;
-		    	margin-top: @map-tile-size * 0.5;
+		    	margin-left: @map-tile-size * -1;
+		    	margin-top: @map-tile-size * 0.5 - @padding;
+		    }
+		    &.center {
+		    	margin-left: @map-tile-size * -0.5 + @padding;
+		    	margin-top: @map-tile-size * -0.5 + @padding;
+			    width: @map-tile-size - @padding * 2;
+			    height: @map-tile-size - @padding * 2;
 		    }
 		}
 	}
