--- a/bin/partials/directives/game-map.html
+++ b/bin/partials/directives/game-map.html
@@ -6,6 +6,9 @@
 			<game-map-wall tile="tile" direction="W"></game-map-wall>
 			<game-map-wall tile="tile" direction="S"></game-map-wall>
 			<div class="items" ng-show="hasItems(tile)">ITEMS!</div>
+			<div class="animations-frame">
+				<div ng-repeat="animation in tile.animations" class="animation" ng-class="animation"></div>
+			</div>
 			<div class="teamWalkingDirection" data-ng-show="tile.teamWalkingTo">MOVING HERE!</div>
 			<div class="enemies-panel">
 				<div ng-repeat="(enemyType, enemyCount) in getGroupedEnemies(tile.enemies)" class="enemy {{enemyType}}">
