--- a/bin/partials/directives/game-map.html
+++ b/bin/partials/directives/game-map.html
@@ -1,6 +1,6 @@
 <div class="map">
 	<div ng-repeat="column in map" class="column">
-		<div ng-repeat="tile in column" data-ng-class="getTileClass(tile);" class="tile">
+		<div ng-repeat="tile in column" ng-class="{area: tile.area, room: tile.room, visible: tile.visible, revealed: tile.revealed, start: tile.start, finish: tile.finish}" class="tile">
 			<game-map-wall tile="tile" direction="N"></game-map-wall>
 			<game-map-wall tile="tile" direction="E"></game-map-wall>
 			<game-map-wall tile="tile" direction="W"></game-map-wall>
