--- a/bin/styles/less/include/game.less
+++ b/bin/styles/less/include/game.less
@@ -371,13 +371,12 @@
 .modal-content-wrapper {
 	position: absolute;
 	top: 30px;
-	left: 50%;
+	right: 50%;
 	height: 0;
 
 	.modal-content {
 	    position: relative;
-		margin-left: -50%;
-    	margin-right: 50%;
+    	left: 50%;
 		background: white;
 
     	.modal-close {
